--- a/npm/package.json
+++ b/npm/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@khanglvm/tool-hub-mcp",
     "version": "1.0.1",
-    "description": "Serverless MCP Aggregator - Reduce AI context token consumption by 60-97%",
+    "description": "Serverless MCP Aggregator - Reduce AI context token consumption by 38%",
     "bin": {
         "tool-hub-mcp": "./cli.js"
     },
