--- a/npm/platforms/linux-arm64/package.json
+++ b/npm/platforms/linux-arm64/package.json
@@ -1,23 +1,10 @@
 {
-    "name": "@khanglvm/tool-hub-mcp-linux-arm64",
-    "version": "1.0.0",
-    "description": "Platform-specific binary for tool-hub-mcp (Linux ARM64)",
-    "os": [
-        "linux"
-    ],
-    "cpu": [
-        "arm64"
-    ],
-    "bin": {
-        "tool-hub-mcp": "./bin/tool-hub-mcp"
-    },
-    "files": [
-        "bin"
-    ],
-    "author": "khanglvm",
-    "license": "MIT",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/khanglvm/tool-hub-mcp.git"
-    }
+  "name": "@khanglvm/tool-hub-mcp-linux-arm64",
+  "version": "1.1.1",
+  "description": "Platform-specific binary for tool-hub-mcp (linux-arm64)",
+  "os": ["linux"],
+  "cpu": ["arm64"],
+  "bin": {
+    "tool-hub-mcp": "./bin/tool-hub-mcp"
+  }
 }
