feat: add export-index command and optimize hub_search token efficiency
- Add tool-hub-mcp export-index CLI command with file locking
- Generate ~/.tool-hub-mcp-index.jsonl for bash/grep search
- Auto-regenerate index on setup/add/remove operations
- Remove redundant expectedResponse and matchReason fields
- Flatten hub_search response structure
- Use compact JSON (no indentation)
- 43.7% token savings validated (projected 70% for 10 results)
- Fix race condition in learning/bandit_test.go mockStorage
- Update README, system-architecture, codebase-summary docs

BREAKING CHANGE: hub_search response format changed from nested to flat structure

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,9 +14,16 @@ env:
 
 jobs:
   # ============================================
+  # Run tests before building
+  # ============================================
+  test:
+    uses: ./.github/workflows/test.yml
+
+  # ============================================
   # Build Go binaries for all platforms
   # ============================================
   build:
+    needs: test
     runs-on: ubuntu-latest
     strategy:
       matrix:
